--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', 'build/generated/source/greendao']
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 dependencies {
 
@@ -41,4 +51,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'org.greenrobot:greendao:3.3.0'
 }
